# databricks-dbapi

./: .env.sample  .gitignore  .tool-versions  CHANGELOG.rst  CONTRIBUTORS.rst  HISTORY.rst  LICENSE.txt  Makefile  Pipfile  README.rst  pyproject.toml  setup.py  test.py
databricks_dbapi/: __init__.py  __version__.py  _version.py  databricks.py  hive.py  odbc.py  sqlalchemy_databricks.py
databricks_dbapi/sqlalchemy_dialects/: base.py  hive.py  odbc.py
tests/: conftest.py  test_hive.py  test_odbc.py  test_sqlalchemy_databricks.py
tests/test_sqlalchemy_dialects/: test_odbc_dialect.py
