[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the root of the project
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "databricks_dbapi"
version = "0.3.0"
description = "A DBAPI 2.0 interface and SQLAlchemy dialect for Databricks interactive clusters."
authors = ["Christopher Flynn <crf204@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/crflynn/databricks-dbapi"
repository = "https://github.com/crflynn/databricks-dbapi"
documentation = "https://github.com/crflynn/databricks-dbapi"
keywords = ["databricks", "hive", "dbapi"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
include = ["CONTRIBUTORS.rst", "HISTORY.rst"]

[tool.poetry.plugins."sqlalchemy.dialects"]
"databricks.pyhive" = "databricks_dbapi.sqlalchemy_databricks:DatabricksDialect"

[tool.poetry.extras]
sqlalchemy = ["sqlalchemy"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
pyhive = {version = "^0.6.1", extras = ["hive"]}
sqlalchemy = { version = "^1.3", optional = true }

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true,python = "^3.7" }
twine = "^1.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
