[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.poetry]
name = "databricks_dbapi"
version = "0.5.0"
description = "A DBAPI 2.0 interface and SQLAlchemy dialect for Databricks interactive clusters."
authors = ["Christopher Flynn <crf204@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/crflynn/databricks-dbapi"
repository = "https://github.com/crflynn/databricks-dbapi"
documentation = "https://github.com/crflynn/databricks-dbapi"
keywords = ["databricks", "hive", "dbapi", "sqlalchemy", "dialect"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
include = ["CHANGELOG.rst"]

[tool.poetry.plugins."sqlalchemy.dialects"]
"databricks.pyhive" = "databricks_dbapi.sqlalchemy_dialects.hive:DatabricksPyhiveDialect"
"databricks.pyodbc" = "databricks_dbapi.sqlalchemy_dialects.odbc:DatabricksPyodbcDialect"

[tool.poetry.extras]
sqlalchemy = ["sqlalchemy"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
pyhive = {version = "^0.6.1", extras = ["hive"]}
sqlalchemy = {version = "^1.3", optional = true}
pyodbc = "^4.0.30"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", python = "^3.7" }
isort = {version = "^5.7.0", python = "^3.7" }
pytest = "4.6"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
